Rebase structure